--- a/containers/shiva/static/style.css
+++ b/containers/shiva/static/style.css
@@ -34,6 +34,12 @@ input {
     width: 100%;
 }
 
+textarea {
+    width: 100%;
+    height: 150px;
+    resize: none;
+}
+
 .block {
     border-style: solid;
     border-width: 1px;
