--- a/containers/shiva/template/dialogs.html
+++ b/containers/shiva/template/dialogs.html
@@ -14,6 +14,10 @@
     </style>
 {%- endblock %}
 {%- block content %}
+    {%- if message %}
+    <div class="warning">{{ message|e }}</div>
+    {%- endif %}
+    {%- if nodes %}
     {%- for node in nodes %}
     <div class="dialog">
         {%- if node.avatar %}
@@ -32,4 +36,5 @@
         <div style="clear: both;"></div>
     </div>
     {%- endfor %}
+    {%- endif %}
 {%- endblock %}
