--- a/containers/shiva/static/style.css
+++ b/containers/shiva/static/style.css
@@ -180,6 +180,11 @@ img.dialog_avatar {
     border-radius: 5px;
 }
 
+span.anchor {
+    z-index: -1;
+    padding-top: 45px;
+}
+
 a.message_header {
     color: #333333;
     text-decoration: underline;
@@ -203,4 +208,41 @@ a.message_header:hover {
 a.message_header:active {
     color: #333333;
     text-decoration: underline;
+}
+
+a.message_header:focus {
+    outline: 0;
+    color: #333333;
+    text-decoration: underline;
+}
+
+a.item_name {
+    color: #000000;
+    text-decoration: none;
+}
+
+a.item_name:link {
+    color: #000000;
+    text-decoration: none;
+}
+
+a.item_name:visited {
+    color: #000000;
+    text-decoration: none;
+}
+
+a.item_name:hover {
+    color: #000000;
+    text-decoration: none;
+}
+
+a.item_name:active {
+    color: #000000;
+    text-decoration: none;
+}
+
+a.item_name:focus {
+    outline: 0;
+    color: #000000;
+    text-decoration: none;
 }
