--- a/containers/shiva/template/dialog.html
+++ b/containers/shiva/template/dialog.html
@@ -20,7 +20,7 @@
     {%- if nodes %}
     {%- for node in nodes %}
     <div class="{{ node.class_|e }}">
-        <a class="message_header" name="{{ node.id_|e }}" href="#{{ node.id_|e }}">{{ node.author|e }} - {{ node.timestamp|e }}</a><br />
+        <span class="anchor" id="{{ node.id_|e }}"><a class="message_header" href="#{{ node.id_|e }}">{{ node.author|e }} - {{ node.timestamp|e }}</a></span><br />
         <p style="word-wrap: break-word; word-break: break-all;">
             {%- for line in node.body %}
             {{ line|e }}<br />
