--- a/containers/shiva/template/dialogs.html
+++ b/containers/shiva/template/dialogs.html
@@ -26,7 +26,7 @@
         </div>
         {%- endif %}
         <div style="float: left; padding: 7px;">
-            {{ node.name|e }}<br />
+            <span class="anchor" id="id{{ node.id|e }}"><a class="item_name" href="#id{{ node.id|e }}">{{ node.name|e }}</a></span><br />
             {{ node.info|e }}
         </div>
         <div style="float: right; text-align: right;">
