--- a/containers/shiva/template/index.html
+++ b/containers/shiva/template/index.html
@@ -17,7 +17,9 @@
     <div class="block">
         <div style="text-align: center;">Welcome to S.H.I.V.A.!</div><br />
         {%- for module in modules %}
+        {%- if module.instance.module_is_avalaible() %}
         <a class="button_long" href="/{{ module.path|e }}/">{{ module.name|e }}</a>
+        {%- endif %}
         {%- endfor %}
     </div>
 {%- endblock %}
